name:                tt
version:             0.1.0.0
synopsis:            simple time tracker
description:         tt tracks execution times per day of the computer
homepage:            https://github.com/githubuser/tt#readme
license:             BSD3
license-file:        LICENSE
author:              Christophe Delord
maintainer:          cdsoft.fr
copyright:           2018 Christophe Delord
category:            Time management
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O3 -fwarn-unused-do-bind
  build-depends:       base >= 4.7 && < 5
                     , time
                     , filepath
                     , directory
                     , strict
                     , extra
